metodo get en formularios

--- a/aspirantes.html
+++ b/aspirantes.html
@@ -15,7 +15,7 @@
     </header>
 
     <div class="contenedor-principal">
-        <form action="index.html" method="post" class="form-aspirantes">
+        <form action="index.html" method="get" class="form-aspirantes">
             <div class="aspirante">
                 <h3>
                     Pepito Perez Gabista
