--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <div class="contenedor-login">
-        <form action="aspirantes.html" method="post" class="form-login">
+        <form action="aspirantes.html" method="get" class="form-login">
             <h2>Inicio de sesión</h2>
             <label for="email">Correo electrónico:</label>
             <input type="email" name="Correo" id="email" placeholder="Ingresa tu correo institucional" required
